k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mern-chatapp
spec:
  selector:
    app: mern-chatapp
  ports:
    - name: http
      port: 80
      targetPort: 5000
  type: ClusterIP
